--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@ ga('send', 'pageview'); -->
 				<img alt="hamburger menu to close menu" role="button" aria-label="Close menu" class="hamburgerBlack" onclick="menuSwitch()" src="images/hamburger_black.png">
 			</div>
 		</div>
-		<!-- <img onclick="openChat()" id="chatbutton" src="images/chatbutton.png">	 -->
 	</header>
 
 
@@ -264,35 +263,6 @@ ga('send', 'pageview'); -->
 			
 		</section>
 		<section id="contact_section">
-			<!-- <div class="contactCont">
-				<h2>CONTACT US</h2>
-					<form action="mail.php" method="POST" class="contactForm">
-						<div class="namePhoneCont">
-								<div class="form oneLine">
-									<label for="name">Name </label>
-									<input type="text" placeholder="Firstname Surname" name="name" id="name" required>
-								</div>
-								<div class="form oneLine">
-										<label for="phone">Phone</label>
-										<input type="tel" placeholder="07412345678" id="phone" name="phone">
-												<input type="tel" placeholder="07412345678" id="phone" name="phone"
-													pattern="^\s*\(?(020[7,8]{1}\)?[ ]?[1-9]{1}[0-9{2}[ ]?[0-9]{4})|(0[1-8]{1}[0-9]{3}\)?[ ]?[1-9]{1}[0-9]{2}[ ]?[0-9]{3})\s*$"> 
-								</div>
-							</div>
-							<div class="form">
-								<label for="email">Email </label>
-								<input type="email" placeholder="example@gmail.com" name="email" id="email" required>
-							</div>
-							<div class="form">
-									<label for="message">Write your message </label>
-									<textarea name="message" id="message" rows="4" cols="45">Enter message here</textarea>
-							</div>
-							<div class="form submitBtn">
-									<input type="submit" value="SEND" role="button">
-								</div>
-						</form>
-			</div>
-			<hr> -->
 			<h2>GET IN TOUCH</h2>
 			<hr> 
 				<div class="contactInfo">
@@ -321,20 +291,15 @@ ga('send', 'pageview'); -->
 						<h3>SOCIAL</h3>
 							<a href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" id="linkedinBlack" src="images/social/black/linkedin.png" ></a>
 							<a href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
-							<!-- <img alt="Aequos SD-WAN LinkedIn"  id="instaBlack" src="images/social/black/instagram.png">
-							<img id="facebookBlack" src="images/social/black/facebook.png"> -->
 					</div>
 					<div class="infoContact">
 						<button role="navigation" aria-label="navigation to new page with a contact form" class="contactBtn"><a href="contact-us.html">Contact us</a></button>
 					</div>
 			</div>
-
 			</main>
-
 		</section>
 
 		<footer>
-
 			<div class="footerCont">
 				<div class="footerAequos">
 					<h2>AEQUOS</h2>
@@ -364,26 +329,17 @@ ga('send', 'pageview'); -->
 		</footer>
 
 
-	<!-- Section intro -->
-
-
-
-
-	
-			<!-- <script type="text/javascript">(function(t,e){var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0];a=e.createElement("script");a.setAttribute("type","text/javascript");a.setAttribute("src",t);r.appendChild(a);}catch(t){}};t.CollectId = "5c488ce076c07a4238fe55e2";r("https://collectcdn.com/launcher.js");})(window,document);</script> -->
-			<!-- <script type="text/javascript">!function(t,e){t.artibotApi={l:[],t:[],on:function(){this.l.push(arguments)},trigger:function(){this.t.push(arguments)}};var a=!1,i=e.createElement("script");i.async=!0,i.type="text/javascript",i.src="https://app.artibot.ai/loader.js",e.getElementsByTagName("head").item(0).appendChild(i),i.onreadystatechange=i.onload=function(){if(!(a||this.readyState&&"loaded"!=this.readyState&&"complete"!=this.readyState)){new window.ArtiBot({i:"f5e9f001-3b7a-46e7-9d7d-d090e1ccb079"});a=!0}}}(window,document);</script> -->
-
 			<!-- <link href="https://snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css">
 			<script src="https://snatchbot.me/sdk/webchat.min.js"></script>
 			<script> Init("?botID=42894&appID=webchat", 600, 600, "https://dvgpba5hywmpo.cloudfront.net/media/image/skqauCIgqm7BAC7AdyLOpggUC", "rectangle", "#FFFFFF", 101, 50, 35, "", "1", "##ffffff", "#FFFFFF", 0); 
-			</script> -->
-			
+			</script> -->                        
 
-			<!-- <p> hi</p> -->
-                        
 
-<!--	</footer>
-	<div id="cookie-law-info-bar" class="cookie-law-bar-index"><span>This website uses cookies to improve your experience. We'll assume you're ok with this, but you can opt-out if you wish.<a  class="cookie_action_close_header medium cli-plugin-button cli-plugin-main-button accept-cli">Accept</> <a href="http://aequos.co.uk/privacy-policy.html" id="CONSTANT_OPEN_URL" target="_blank" class="cli-plugin-main-link" >Read More</a></span></div> -->
+	<div class="cookie-law">
+		<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
+		<button class="cookieBtn">ACCEPT</button>
+			<a class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
+	</div> 
 
 	  
 
@@ -396,7 +352,7 @@ ga('send', 'pageview'); -->
 <script src="js/swiper.min.js"></script>
 <script src="js/swiper.custom.js"></script> -->
 <!-- <script src="js/menu.js"></script> -->
-<!-- <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script> -->
+	<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 
 </body>
 </html>
