cookie bar closes js function done

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@ ga('send', 'pageview'); -->
 			<div id="TFMlogo_heading">
 					<img alt="TFM Group Logo" id="TFMLogo" src="images/TFMlogo.png">
 			</div>
+			<div class="cookie-law">
+					<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
+					<button onclick="accepted()" class="cookieBtn">ACCEPT</button>
+						<a class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
+				</div> 
 			
 		</section>
 		<div id="heading_bottom">
@@ -333,13 +338,6 @@ ga('send', 'pageview'); -->
 			<script src="https://snatchbot.me/sdk/webchat.min.js"></script>
 			<script> Init("?botID=42894&appID=webchat", 600, 600, "https://dvgpba5hywmpo.cloudfront.net/media/image/skqauCIgqm7BAC7AdyLOpggUC", "rectangle", "#FFFFFF", 101, 50, 35, "", "1", "##ffffff", "#FFFFFF", 0); 
 			</script> -->                        
-
-
-	<div class="cookie-law">
-		<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
-		<button class="cookieBtn">ACCEPT</button>
-			<a class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
-	</div> 
 
 	  
 
