--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="UK's Leading Software-Defined Wide Area Network Provider" />
 <meta name="keywords" content="Aequos, technology, Business, SD-WAN" />
-<title>AEQUOS - Right-size your network</title>
+<title>AEQUOS - Services</title>
 <!-- <link rel="stylesheet" href="css/swiper.css"> -->
 <link rel="stylesheet" href="css/style.css">
 <!-- <script src="prefixfree.js"></script> -->
@@ -32,7 +32,7 @@
 			"@type": "Person",
 			"name": "Andy Weedon"
 		} ],
-	  "contactPoint": {
+		"contactPoint": {
 		"@type": "Contact",
 		"telephone": "0345 646 6060",
 		"email": "mailto:info@aequos.co.uk",
@@ -103,7 +103,7 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="#home_section">HOME</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="sd-wan" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="about.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
@@ -122,12 +122,12 @@ ga('send', 'pageview'); -->
 
 
 	<main class="flex-container" role="main">
-		<section id="home_section">
-			<img class="shape" src="images/shape.gif" alt="blue background abstract shape">
-			<div class="main_heading">
+		<section id="servicesHome_section">
+			<img class="shape shapeServiceHome" src="images/shapeBlack.gif" alt="blue background abstract shape">
+			<div class="main_heading services">
 				<h2>AEQUOS</h2>
-				<h1>RIGHT-SIZE <br>YOUR NETWORK</h1>
-				<h3>Aequos are the experts in using SD-WAN to deliver the right networking solutions and the right bandwidth at the right times.</h3>
+				<h1>OUR SERVICES</h1>
+				<h3>Three levels of SD-WAN services deliver the flexibility to choose what’s right for your business.</h3>
 			</div>
 			<div class="TFMlogo_heading">
 					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMlogo.png">
@@ -150,111 +150,89 @@ ga('send', 'pageview'); -->
 		</div>
 			<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
 			<p aria-label="Close chat" role="button" class="close" onclick="closeChat()"> X</p>
-		<section id="services_section">
-			
-			<div class="subSection">
-					<h2>THE FUTURE OF NETWORKING</h2>
-				<p>Whatever the size of your company, whichever sector you work in, Aequos is a proven guide to the new world of cloud-based connectivity. We specialise in deploying next-generation SD-WAN to deliver right-sized networking solutions and bandwidth. We are here to make sure every application in every location fits your business priorities. Supports your objectives. And powers your growth.
-				</p>
-				<p id="model">Our business first model is designed to meet the demands of modern-day application and end-user requirements.</p>
-				<div class="servicesList">
-					<h3>WE OFFER THREE LEVELS OF SD-WAN
-							MANAGED SERVICE</h3>
-					<div class ="services_main">
-						<div class="serv_sections">
-							<h4>BRONZE SERVICE</h4>
-							<ul>
-								<li>Bandwidth</li>
-								<li>Infrastructure</li>
-								<li>Optional Scoping & Design</li>
-							</ul>
-							<a aria-label="Navigation to Services page Bronze Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-						<div class="serv_sections">
-							<h4>SILVER SERVICE</h4>
-							<ul>
-									<li>Lifecycle Management</li>
-									<li>All Infrastructure & Bandwidth</li>
-									<li>Scoping & Design</li>
-									<li>Monitoring & Trends</li>
-								</ul>
-								<a aria-label="Navigation to Services page Silver Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-						<div class="serv_sections">
-							<h4>GOLD SERVICE</h4>
-							<ul>
-									<li>Perimeter Security</li>
-									<li>Lifecycle Management</li>
-									<li>Application flows</li>
-									<li>All infrastructure & Bandwidth</li>
-									<li>Scoping & Design</li>
-									<li>Monitoring & Trends</li>
-								</ul>
-								<a aria-label="Navigation to Services page Gold Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-					</div>
+		<section id="servicesMain">
+			<div class="servicesMainListed" id="bronze">
+				<div class="serviceContainer">
+					<h2>BRONZE SERVICE</h2>
+					<p>All the expert advice and cutting edge technology you need to upgrade your existing WAN to next-gen SD-WAN.</p>
+			</div>
+				<ul>
+					<li>Bandwidth</li>
+					<li>Infrastructure</li>
+					<li>Optional Scoping & Design</li>
+				</ul>
+			</div>
+			<div class="servicesMainListed" id="silver">
+				<div class="serviceContainer">
+					<h2>SILVER SERVICE</h2>
+					<p>All the benefits of our Bronze Service, plus we also take away the headaches of managing third parties and network infrastructure.</p>
 				</div>
+				<ul>
+					<li>Lifecycle Management</li>
+					<li>All Infrastructure & Bandwidth</li>
+					<li>Scoping & Design</li>
+					<li>Monitoring & Trends</li>
+				</ul>
+			</div>
+			<div class="servicesMainListed" id="gold">
+				<div class="serviceContainer">
+					<h2>GOLD SERVICE</h2>
+					<p>Full management of all infrastructure and operational aspects of your SD-WAN service.</p>
+				</div>
+				<ul>
+					<li>Perimeter Security</li>
+					<li>Lifecycle Management</li>
+					<li>Application flows</li>
+					<li>All infrastructure & Bandwidth</li>
+					<li>Scoping & Design</li>
+					<li>Monitoring & Trends</li>
+				</ul>
 			</div>
 		</section>
 
-		<section id="sdWan_section">
-			<div class="upsideShape">
-					<img class="shape upside" src="images/shapeTransBlack.gif" alt="blue background abstract shape">
-			</div>
+		<section id="servicesMainDescription">
 			<div class="sdHome">
-				<h2>SD-WAN IS THE NEW REALITY</h2>
+				<h2>CHOOSE THE NETWORK THAT FITS YOUR BUSINESS</h2>
 				<div class="sdHomeDescr">
-					<p>SD-WAN uses the advantages of cloud computing to transform the management of WANs through a single cloud-based console. Simple, streamlined, scalable, it empowers you to dynamically share bandwidth throughout your WAN. Remotely re-allocate it at will, rather than waiting for an on-site engineer to reconfigure it at local network level. And allocate it according to need, flexibly scaling up and down as required. </p>
-					<h3>Cloud-based connectivity transforms the way you manage your networks.</h3>
-					<a aria-label="Navigation to SD-WAN page" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-				</div>
-				<div class="sdIconsHome">
-						<img alt="greater agility" id="agilityIcon" src="images/agility.png">
-						<img alt="increased performance" id="performanceIcon" src="images/performance.png">
-						<img alt="advanced control" id="controlIcon" src="images/control.png">
-						<img alt="robust security" id="securityIcon" src="images/security.png">
-						<img alt="third party extension" id="extensionIcon" src="images/extension.png">
-						<img alt="cloud ready" id="cloudIcon" src="images/cloud.png">
+					<p>OUR RANGE OF SD-WAN MANAGED SERVICES DELIVER A MODERN NETWORKING CAPABILITY THAT CONSTANTLY EVOLVES AS TECHNOLOGY ADVANCES AND YOUR BUSINESS GROWS. </h3>
+					<p>By separating physical WAN circuits (the Underlay network) from WAN topology (the Overlay), our services provide unrivalled levels of support in building and proactively managing a more efficient, highly responsive and business-focused network. </p>
+					<p>In most cases, our wide range of proven carrier, capacity and resilience models transform virtually every location. Whichever level you choose, you can rely on a service that adapts to any topology and seamlessly responds to growth, peak demand and business requirements. All underpinned by a constant focus on business outcomes rather than traditional technical metrics.</p>
+					<p>Behind the technology, the people. Aequos offers the exceptional level of expertise, commitment and energy necessary to drive a truly effective network transformation.</p>
+					<p><strong>Next-generation SD-WAN technology. A proven delivery model. True expertise in our chosen sectors. Trust Aequos to deliver the scalable, sustainable and successful network services that help to achieve your key business objectives.</strong></p>
 				</div>
 			</div>
 		</section>
 
-		<section id="overview_section">
-			<div id="overviewCont">
-				<div class="partner">
-					<h2>WHY PARTNER WITH AEQUOS?</h2>
-					<p>We are a specialist cloud system integrator with a proven track record in creating the right-sized, application-centric, business-focused WAN that supports your move to Cloud and Software Defined technologies. </p>
-				</div>
+		<section id="servicesSectors">
+			<div id="sectorsCont">
+				<h2>WE OPERATE IN FOUR MAIN SECTORS</h2>
 				<div class="reasonsHome">
 					<div class="reasonsHorizontal">
 						<div class="reasonScroll" id="default">
-							<h3>1 WE MANAGE SERVICES</h3>
+							<h3>PUBLIC SECTOR</h3>
 							<p>We deliver the overall coordination and orchestration services you need to tailor your network resources to the precise requirements of your specific business objectives. </p>
 						</div>
 						<div class="reasonScroll" id="first">
-							<h3>2 WE TRANSFORM APPLICATIONS</h3>
+							<h3>HEALTHCARE</h3>
 							<p>We offer the proven expertise to make sure your legacy business applications and data continue to add value and support your ambitions in the new cloud landscape. </p>
 						</div>
 						<div class="reasonScroll" id="second">
-							<h3>3 WE MAKE THE CLOUD HAPPEN</h3>
+							<h3>REATAIL</h3>
 							<p>We seamlessly implement migration from legacy infrastructure to cloud services, providing you with the flexibility to rapidly select, build, and roll out native cloud applications.</p>
 						</div>
 						<div class="reasonScroll" id="third">
-							<h3>4 WE ARE SD-WAN SPECIALISTS</h3>			
+							<h3>PRIVATE SECTOR</h3>			
 							<p>We scope, implement and enhance network infrastructure services that meet the requirements of pecialised sector practices and associated regulatory needs.</p>
 						</div>
 					</div>
-					<div class="reasonsEnd">
-						<h4>OUR EXPERTISE IN TECHNOLOGY IS MATCHED BY AN UNWAVERING FOCUS ON BUSINESS OUTCOMES. AND THAT’S WHAT MAKES US DIFFERENT.</h4>
-					</div>
 				
 				<div class="navReasons">
-					<button aria-label="reveals contents from right to left in descending order" class="toLeft"><img alt="Left arrow" class="navi leftArrow" src="images/left.png"></button>
-					<img alt="black dot refers to reason displayed for partnering with Aequos" class="navi blackDot" src="images/blackdot.png">
+					<button aria-label="reveals contents from right to left in descending order" class="toLeft"><img alt="Left arrow" class="navi leftArrow" src="images/leftwhite.png"></button>
+					<img alt="black dot refers to reason displayed for partnering with Aequos" class="navi blackDot" src="images/bluedot.png">
 					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
 					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
 					<img alt="white dot refers to reason hidden for partnering with Aequos" class="navi whiteDot" src="images/whitedot.png">
-					<button aria-label="reveals contents from left to right in ascending order" class="toRight"><img alt="Right arrow" class="navi rightArrow" src="images/right.png"></button>
+					<button aria-label="reveals contents from left to right in ascending order" class="toRight"><img alt="Right arrow" class="navi rightArrow" src="images/rightwhite.png"></button>
 					<!-- <button><i class="fas fa-chevron-right"></i></button> -->
 				</div>
 				<a class="discoverServices">MORE ABOUT US <i class='fas fa-angle-right'></i></a>
