--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@ ga('send', 'pageview'); -->
 					<h3>AEQUOS</h3>
 				</div>                                                           
 				<ul>
-					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="#home_section">HOME</a></li><p class="nav_line">|</p>
+					<li><a tabindex="0" role="menuitem" tabindex="0" class="selected header-link" href="index.html#home_section">HOME</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="services.html" class="header-link">SERVICES</a></li><p class="nav_line">|</p>
-					<li><a role="menuitem" tabindex="0" href="sd-wan" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
+					<li><a role="menuitem" tabindex="0" href="sd-wan.html#SDhome_section" class="header-link">SD-WAN</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="about.html" class="header-link">ABOUT US</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="news.html" class="header-link">NEWS</a></li><p class="nav_line">|</p>
 					<li><a role="menuitem" tabindex="0" href="contact-us.html" class="header-link">CONTACT</a></li>						
@@ -307,7 +307,7 @@ ga('send', 'pageview'); -->
 							<a href="https://twitter.com/Aequossdwan" target="_blank"><img alt="Aequos SD-WAN Twitter" id="twitterBlack" src="images/social/black/twitter.png"></a>
 					</div>
 					<div class="infoContact">
-						<button role="navigation" aria-label="navigation to new page with a contact form" class="contactBtn"><a href="contact-us.html">Contact us</a></button>
+						<button role="navigation" aria-label="navigation to new page with a contact form" class="contactBtn"><a href="contact-us.html">Contact us <i class='fas fa-angle-right'></i></a></button>
 					</div>
 			</div>
 			</main>
