sdwan page progress made

--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@ ga('send', 'pageview'); -->
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
 					<a href="#home_section">Home</a>
-					<a>Services</a>
-					<a>SD-WAN</a>
+					<a href="services.html#servicesHome_section">Services</a>
+					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
 					<a>About us</a>
 					<a>News</a>
 					<a href="contact-us.html">Contact</a>
