--- a/sd-wan.html
+++ b/sd-wan.html
@@ -137,11 +137,11 @@ ga('send', 'pageview'); -->
 					<button onclick="accepted()" class="cookieBtn">ACCEPT</button>
 						<a class="cookie" href="privacy-policy.html" target="_blank">READ MORE <i class='fas fa-angle-right'></i></a>
 				</div> 
-			
 		</section>
+		
 		<div id="heading_bottom">
 			<p>SEE MORE</p>
-			<a href="#services_section"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
+			<a href="#SDwanMain"><img role="button" aria-label="Scroll down to next section" alt="down arrow" id="dropDown" src="images/dropD.png"></a>
 
 		</div>
 		<div class="chat">
@@ -150,51 +150,9 @@ ga('send', 'pageview'); -->
 		</div>
 			<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
 			<p aria-label="Close chat" role="button" class="close" onclick="closeChat()"> X</p>
-		<section id="services_section">
-			
-			<div class="subSection">
-					<h2>THE FUTURE OF NETWORKING</h2>
-				<p>Whatever the size of your company, whichever sector you work in, Aequos is a proven guide to the new world of cloud-based connectivity. We specialise in deploying next-generation SD-WAN to deliver right-sized networking solutions and bandwidth. We are here to make sure every application in every location fits your business priorities. Supports your objectives. And powers your growth.
-				</p>
-				<p id="model">Our business first model is designed to meet the demands of modern-day application and end-user requirements.</p>
-				<div class="servicesList">
-					<h3>WE OFFER THREE LEVELS OF SD-WAN
-							MANAGED SERVICE</h3>
-					<div class ="services_main">
-						<div class="serv_sections">
-							<h4>BRONZE SERVICE</h4>
-							<ul>
-								<li>Bandwidth</li>
-								<li>Infrastructure</li>
-								<li>Optional Scoping & Design</li>
-							</ul>
-							<a aria-label="Navigation to Services page Bronze Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-						<div class="serv_sections">
-							<h4>SILVER SERVICE</h4>
-							<ul>
-									<li>Lifecycle Management</li>
-									<li>All Infrastructure & Bandwidth</li>
-									<li>Scoping & Design</li>
-									<li>Monitoring & Trends</li>
-								</ul>
-								<a aria-label="Navigation to Services page Silver Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-						<div class="serv_sections">
-							<h4>GOLD SERVICE</h4>
-							<ul>
-									<li>Perimeter Security</li>
-									<li>Lifecycle Management</li>
-									<li>Application flows</li>
-									<li>All infrastructure & Bandwidth</li>
-									<li>Scoping & Design</li>
-									<li>Monitoring & Trends</li>
-								</ul>
-								<a aria-label="Navigation to Services page Gold Service" class="discoverServices" href="">Discover More <i class='fas fa-angle-right'></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
+		<section id="SDwanMain">
+			<img class="sdImg" src="images/SDbenefits.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
+			<img class="sdImgLarge" src="images/SDbenefitslarge.png" alt="The benefits of SD-wan include: greater agility, increased performanc, advanced control, robust security, third party extension, cloud-first">
 		</section>
 
 		<section id="sdWan_section">
@@ -325,8 +283,8 @@ ga('send', 'pageview'); -->
 				<div class="sitemap">
 					<h3>AEQUOS</h3>
 					<a href="#home_section">Home</a>
-					<a>Services</a>
-					<a>SD-WAN</a>
+					<a href="services.html#servicesHome_section">Services</a>
+					<a href="sd-wan.html#SDhome_section">SD-WAN</a>
 					<a>About us</a>
 					<a>News</a>
 					<a href="contact-us.html">Contact</a>
